# eirb-com-helper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  convert.py  docker-compose.yml  listenChatId.py  main.py  msg.md  pyproject.toml  run.sh  send_message.py
eirb-com-helper/: bot.py  converter.py
eirb_com_helper/: bot.py  chat_id_giver.py  converter.py  server.py
eirb_com_helper/static/: layout.css  main.js  output.css  render_content.js  send_content.js  store.js
eirb_com_helper/templates/: frontend.html
frontend/: index.html  install-deps.sh  output.css  page.html  render_content.js  send_content.js
tests/: msg.html  msg.md  test_comhelper.py  test_requests.sh
